# ticketchain-mvp

./: .editorconfig  .env.docker  .env.example  .env.template  .env.test  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .markdownlint.json  .pre-commit-config-local.yaml  .pre-commit-config.yaml  .secrets.baseline  .solhint.json  DAY0_SUMMARY.md  LICENSE  Makefile  README.md  docker-compose.yml  eslint.config.js  foundry.toml  hardhat.config.js  jest.config.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.cursor/rules/: coding-guidlines-rule.mdc  founding-document-rule.mdc  memory-bank-rule.mdc  mvp-implementation-plan.mdc  project-instructions.mdc
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.extend.yml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_issue.md  tech_debt.md
.github/workflows/: ci-old.yml.disabled  ci.yml  test-deploy.yml  test.yml
config/: solhint.json
contracts/: EventRegistry.sol  SimpleMarketplace.sol  TicketNFT.sol
contracts/interfaces/: IEventRegistry.sol  ISimpleMarketplace.sol  ITicketNFT.sol
contracts/test/: MaliciousBuyer.sol
deployments/: README.md  deployment-localhost-1748595816998.json  deployment-localhost-1748595939223.json  deployment-localhost-1748609491710.json  deployment-localhost-1748609665235.json  deployment-localhost-1748700917130.json  deployment-localhost-1748701269456.json  deployment-localhost-1749051968305.json  deployment-localhost-1749052146360.json  latest-amoy.json  latest-localhost.json
docs/: CI_FIXES_SUMMARY.md  DOCKER.md  SECURITY.md  architecture.md  deployment-guide.md  dev_log.md  p0-deploy-test-summary.md  test-coverage.md
docs/adr/: 0001-record-architecture-decisions.md  001-docker-containerization.md  001-testing-strategy.md
docs/contracts/: overview.md
docs/security/: credentials_best_practices.md
infra/docker/: .env.docker  api.Dockerfile  app.Dockerfile  hardhat.Dockerfile
scripts/: auto-commit.sh  auto-mine.js  deploy.js  docker-deploy.sh  local-ci-simple.sh  local-ci.sh  mint-test-ticket.js  run-tests.sh  safe-commit.sh  update-abis.sh  verify.js
src/: app.module.ts  main.ts
src/common/: common.module.ts
src/common/controllers/: health.controller.ts
src/common/decorators/: rate-limit.decorator.ts
src/common/filters/: blockchain-exception.filter.ts  http-exception.filter.ts
src/common/guards/: api-key.guard.ts
src/config/: configuration.ts
src/graphql/: schema.graphql
test/: jest-integration.json  jest-unit.json  jest.setup.ts  jest.teardown.ts  test-config.ts
test/integration/: health.integration.spec.ts
test/utils/: suppress-errors.ts  test-app.ts
(+42 files in other folders)
